добавил параметр icon в файл projects.json

--- a/assets/json/projects.json
+++ b/assets/json/projects.json
@@ -1,1 +1,1 @@
-{"title":"Мои проекты","description":"","attachments":[{"name":"Штирлиц","title":"Автономное приложение для шифровки и дешифровки файлов","description":"123"}]}
+{"title":"Мои проекты","description":"","attachments":[{"name":"Штирлиц","icon":"stirlits/assets/img/icon-64.png","title":"Автономное приложение для шифровки и дешифровки файлов","description":"123"}]}
